# firmware

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  sonar-project.properties  todo.md
.github/workflows/: formatting.yml
cmake/: FindChibiOS.cmake  FindFatFs.cmake  FindLittlefs.cmake  FindPID.cmake  FindTcbSpan.cmake  FindVendoredBoost.cmake  gcc_stm32.cmake  gcc_stm32f4.cmake
cmake/ChibiOS/: ChibiOS_Boards.cmake  ChibiOS_HAL.cmake  ChibiOS_RT.cmake
dbg-scripts/: flash-fcu.cfg
src/: fcu.cpp  filesystem.cpp  filesystem.h
src/boards/fcudev/: board.c  board.yml
src/cfg/: chconf.h  ffconf.h  halconf.h  lfs_util.c  lfs_util.h  mcuconf.h
src/controllers/: max31855.cpp  max31855.h
src/drivers/: max31855.cpp  max31855.h  mpl115a.cpp  mpl115a.h  ms5611.cpp  ms5611.cpp.txt  ms5611.h  ms5611.h.txt  mti.cpp  mti.h  servo.cpp  servo.h
src/drivers/xbus/: parser.cpp  parser.h
src/sys/: syscalls.c
src/sys/fault/: fault_handlers_v7m.c  handlers.h  hardfault_handler_v7m.s
src/sys/filesystem/: fatfs_diskio.c  fatfs_syscall.c
src/threads/: imu.cpp  imu.h  rollcntrl.cpp  rollcntrl.h  sd.cpp  sd.h  test-barometer.cpp
src/util/: impl_bit_cast.h
